# Sudoku-OpenCV

./: .gitignore  CMakeLists.txt  ImageHandler.cpp  ImageHandler.h  NeuralNetwork.cpp  NeuralNetwork.h  OpenCV_3.0.props  README.md  ReadMe.txt  Sudoku-OpenCV.sln  Sudoku-OpenCV.vcxproj  main.cpp  w2.txt
CMakeBuild/: CMakeCache.txt  cmake_install.cmake
CMakeBuild/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
CMakeBuild/Suduku-OpenCV.xcodeproj/: project.pbxproj
Debug/: Sudoku-OpenCV.ilk
Sudoku-OpenCV/: CMakeLists.txt  ImageHandler.cpp  ImageHandler.h  Sudoku-OpenCV.cpp  Sudoku-OpenCV.vcxproj.filters  stdafx.cpp
Sudoku-OpenCV/Debug/: imagehandler.obj.enc  vc140.idb
Sudoku-OpenCV/Debug/Sudoku-OpenCV.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sudoku-OpenCV.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
results/Iteration 1/1/: measure.txt
results/Iteration 1/10/: measure.txt
results/Iteration 1/11/: measure.txt
results/Iteration 1/12/: measure.txt
results/Iteration 1/13/: measure.txt
results/Iteration 1/14/: measure.txt
results/Iteration 1/15/: measure.txt
results/Iteration 1/16/: measure.txt
results/Iteration 1/17/: measure.txt
results/Iteration 1/18/: measure.txt
results/Iteration 1/19/: measure.txt
results/Iteration 1/2/: measure.txt
results/Iteration 1/20/: measure.txt
results/Iteration 1/21/: measure.txt
results/Iteration 1/22/: measure.txt
results/Iteration 1/23/: measure.txt
results/Iteration 1/24/: measure.txt
results/Iteration 1/25/: measure.txt
results/Iteration 1/26/: measure.txt
results/Iteration 1/27/: measure.txt
(+110 files in other folders)
